--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,14 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".LinearLayoutActivity" />
+        <activity android:name=".TableLayoutActivity" />
+        <activity android:name=".JisuanjiActivity" />
+        <activity android:name=".YueshubujuActivity" />
     </application>
 
 </manifest>
